--- a/src/style.css
+++ b/src/style.css
@@ -3,3 +3,22 @@
   margin: 0;
   padding: 0;
 }
+
+.gif-button {
+  background-color: #04aa6d;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline;
+  font-size: 16px;
+  cursor: pointer;
+  transition-duration: 0.4s;
+}
+
+.gif-button:hover {
+  box-shadow:
+    0 12px 16px 0 rgba(0, 0, 0, 0.24),
+    0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
