--- a/src/style.css
+++ b/src/style.css
@@ -14,9 +14,15 @@
 body {
   background-color: var(--bg-dark);
   display: flex;
-  justify-content: center;
   flex-direction: column;
   height: 100vh;
+}
+
+.main {
+  display: flex;
+  flex: 1;
+  justify-content: center;
+  align-items: center;
 }
 
 .image-frame {
