--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 :root {
-  --bg-dark: #12151c;
+  --bg-dark-1: #12151c;
+  --bg-dark-2: #191d26;
   --accent: #04aa6d;
   --accent-dark: #1f8d4d;
   --text-light: #eaebec;
@@ -12,10 +13,47 @@
 }
 
 body {
-  background-color: var(--bg-dark);
+  background-color: var(--bg-dark-1);
   display: flex;
   flex-direction: column;
   height: 100vh;
+}
+
+.button {
+  background-color: var(--accent);
+  border: none;
+  border-radius: 5px;
+  color: var(--text-light);
+  text-align: center;
+  text-decoration: none;
+  display: inline;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.header {
+  text-align: center;
+  padding: 15px 20px;
+  background-color: var(--bg-dark-2);
+  border-bottom: solid 2px var(--accent-dark);
+}
+
+.search-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+}
+
+.search {
+  border: 1px solid #aaa;
+  width: 15%;
+  border-radius: 5px;
+  padding: 10px;
+}
+
+.submit {
+  padding: 10px 20px;
 }
 
 .main {
@@ -33,18 +71,9 @@ body {
 }
 
 .gif-button {
-  background-color: var(--accent);
-  border: none;
-  border-radius: 5px;
-  color: var(--text-light);
   padding: 10px 20px;
-  text-align: center;
-  text-decoration: none;
-  display: inline;
-  font-size: 16px;
-  cursor: pointer;
 }
 
-.gif-button:hover {
+button:hover {
   background-color: var(--accent-dark);
 }
